--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "vozbook-ai",
+  "private": true,
   "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^1.0.0",
+    "@google/genai": "^0.1.2",
     "@supabase/supabase-js": "^2.39.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,7 +23,7 @@
     "autoprefixer": "^10.4.18",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.4.2",
-    "vite": "^5.1.5"
+    "typescript": "^5.2.2",
+    "vite": "^5.1.4"
   }
 }
